# dact

./: .gitignore  BUILD.md  CHANGELOG.markdown  CMakeLists.txt  CNAME  DactMainWindow.cpp  DactMainWindow.h  DactMainWindow.ui  Download.md  Doxyfile  GlobalMenu.TODO  Installation.md  Makefile  README.markdown  Screenshots.md  TODO  TODO.new-bracketing  Usage.md  XPathFilter.hh  XPathValidator.cpp  XPathValidator.hh  XSLTransformer.cpp  XSLTransformer.hh  _config.yml  alpino-dact.desktop  appcast-mac.xml  appcast-win.xml  appimage.nix  application.qrc  bracketed-sentence.xsl  dact.pro  dact.sublime-project  dact.xpr  default.css  default.js  default.nix  dt2tree.xsl  flake.nix  index.html  index.md  (+11 more)
.github/workflows/: release.yml  test.yml
_includes/: menu.html
_layouts/: base.html  manual.html
cmake/: FindAlpinoCorpus.cmake  FindDBXML.cmake  FindIconv.cmake  FindIndexedCorpus.cmake  FindLibExslt.cmake  FindQDictZip.cmake  FindQtSparkle.cmake  FindXQilla.cmake  FindXercesC.cmake
cookbook/: index.md
debian/: alpino-dact.1  alpino-dact.sharedmimeinfo  changelog  control  copyright  manpages  menu
debian/source/: patch-header
doc/: dact.qhcp  dact.qhp  index.html  index.txt  intro.txt
html/: index.xhtml  screen.css
icons/: README
include/: AboutWindow.hh  AppleUtils.hh  ArchiveListItemDelegate.hh  ArchiveListItemWidget.hh  ArchiveModel.hh  AutoUpdater.hh  BracketedColorDelegate.hh  BracketedDelegate.hh  BracketedDelegates.hh  BracketedKeywordInContextDelegate.hh  BracketedSentenceWidget.hh  BracketedVisibilityDelegate.hh  BracketedWindow.hh  Chunk.hh  CorpusWidget.hh  DactApplication.h  DactApplication.hh  DactApplicationEvent.hh  DactColorWell.hh  DactFilterWindow.h  DactHelpWindow.h  DactListView.hh  DactListView3.hh  DactListWidget.h  DactMacro.h  DactMacro.hh  DactMacrosFile.hh  DactMacrosMenu.hh  DactMacrosModel.h  DactMacrosModel.hh  DactMacrosWindow.h  DactMacrosWindow.hh  DactMainWindow.h  DactMainWindow.hh  DactMenuBar.hh  DactProgressDialog.hh  DactQueryHistory.hh  DactQueryModel.hh  DactQueryWindow.h  DactSettings.hh  (+61 more)
man/: dact.1  dact.markdown  meson.build
manual/: cookbook.xhtml  dact-links.js  index.md  index.xhtml  screen.css
nix/: sources.json
qrc/: application.qrc  dact.qrc
resources/: Info.plist  Info.plist.in  dact-corpus.icns  dact-espresso.icns  dact.qrc  dact.rc  entitlements.plist  macos-bundler.sh  meson.build
resources/dtd/: alpino_ds.dtd  tueba_tree.dtd
resources/icons/: README
resources/stylesheets/: Dependencies.markdown  bracketed-html.xsl  bracketed-kwic-html.xsl  bracketed-kwic-text.xsl  bracketed-match-html.xsl  bracketed-match-text.xsl  bracketed-sentence-html.xsl  bracketed-sentence-text.xsl  bracketed-sentence-xml.xsl  bracketed-sentence.xsl  bracketed-text.xsl  conllx_ds.xsl  dt2tree.xsl  stats-csv.xsl  stats-html.xsl  stats-officexml.xsl  stats-text.xsl  tree-sentence.xsl  tree.xsl  tueba-tree.xsl
resources/unix/: dact.desktop
src/: AboutWindow.cpp  AppleUtils.mm  ArchiveListItemDelegate.cpp  ArchiveListItemWidget.cpp  ArchiveModel.cpp  BracketedSentenceWidget.cpp  BracketedWindow.cpp  Chunk.cpp  DactApplication.cpp  DactApplicationEvent.cpp  DactColorWell.cpp  DactListView.cpp  DactListView3.cpp  DactListWidget.cpp  DactMacrosFile.cpp  DactMacrosMenu.cpp  DactMacrosModel.cpp  DactMacrosWindow.cpp  DactMainWindow.cpp  DactMenuBar.cpp  DactProgressDialog.cpp  DactQueryHistory.cpp  DactQueryModel.cpp  DactSettings.cpp  DactStatisticsModel.cpp  DactTableView.cpp  DactTool.cpp  DactToolMenu.cpp  DactToolModel.cpp  DactToolsMenu.cpp  DactToolsModel.cpp  DactTreeScene.cpp  DactTreeView.cpp  DelayedLoadFileCallback.cpp  DependencyTreeWidget.cpp  DownloadWindow.cpp  Edge.cpp  ExportProgressDialog.cpp  FilterModel.cpp  GlobalCopyCommand.cpp  (+49 more)
src/AboutWindow/: AboutWindow.cpp
src/BracketedColorDelegate/: BracketedColorDelegate.cpp
src/BracketedDelegates/: BracketedColorDelegate.cpp  BracketedDelegate.cpp  BracketedKeywordInContextDelegate.cpp  BracketedVisibilityDelegate.cpp
src/BracketedWindow/: BracketedWindow.cpp
src/DactFilterWindow/: DactFilterWindow.cpp
src/DactHelpWindow/: DactHelpWindow.cpp
src/DactMacrosModel/: DactMacrosModel.cpp
src/DactMacrosWindow/: DactMacrosWindow.cpp
src/DactMainWindow/: DactMainWindow.cpp
src/DactQueryHistory/: DactQueryHistory.cpp
src/DactQueryWindow/: DactQueryWindow.cpp
src/DactTreeScene/: DactTreeScene.cpp
src/OpenProgressDialog/: OpenProgressDialog.cpp
src/PreferencesWindow/: PreferencesWindow.cpp
src/StatisticsWindow/: StatisticsWindow.cpp
src/XPathFilter/: XPathFilter.cpp
src/XPathMapper/: XPathMapper.cpp
src/XPathValidator/: XPathValidator.cpp
src/XSLTransformer/: XSLTransformer.cpp
ui/: AboutWindow.ui  ArchiveListItemWidget.ui  BracketedWindow.ui  DactFilterWindow.ui  DactHelpWindow.ui  DactMacrosWindow.ui  DactMainWindow.ui  DactMenuBar.ui  DactProgressDialog.ui  DactQueryWindow.ui  DependencyTreeWidget.ui  DownloadWindow.ui  ExportProgressDialog.ui  MainWindow.ui  OpenCorpusDialog.ui  OpenProgressDialog.ui  PreferencesWindow.ui  RemoteWindow.ui  StatisticsWindow.ui  TreeNodeInspector.ui  WebserviceWindow.ui  meson.build
util/: conll-explode.py  tdz-explode.py
xml/: cookbook.xml  dact.xml
xsl/: html.xsl
